kubernetes/image-service-resnet50/image-service-resnet50-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: image-service-resnet50
  labels:
    app: image-service-resnet50
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-service-resnet50
  template:
    metadata:
      labels:
        app: image-service-resnet50
    spec:
      containers:
        - name: image-service-resnet50
          image: 'image-service-resnet50:dev'
          ports:
            - name: http
              containerPort: 5000
