kubernetes/image-service-resnet50/image-service-resnet50.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-service-resnet50
spec:
  ports:
    - name: http
      targetPort: 5000
      port: 80
  selector:
    app: image-service-resnet50
