kubernetes/image-service-resnet50/image-service-resnet50-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: image-service-resnet50
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: image-service-resnet50.minikube
      http:
        paths:
          - backend:
              serviceName: image-service-resnet50
              servicePort: http
  tls:
    - secretName: tls-minikube-default
